DotNetLoxInterpreter/language.grammar
program        -> declaration* EOF ; 

declaration    -> varDecl
                | funDecl
                | statement ;

varDecl        -> "var" IDENTIFIER ( "=" expression )? ";" ;

funDecl        -> "fun" function ;

function       -> IDENTIFIER "(" parameters? ")" blockStmt ;
parameters     -> IDENTIFIER ( "," IDENTIFIER )* ;

statement      -> exprStmt
                | ifStmt
                | forStmt
                | whileStmt
                | breakStmt
                | returnStmt
                | printStmt
                | blockStmt ;

ifStmt         -> "if" "(" expression ")" statement ( "else" statement )? ;

forStmt        -> "for" "(" ( varDecl | exprStmt | ";" ) expression ";" expression? ")" statement ;
whileStmt      -> "while" "(" expression ")" statement ;

blockStmt      -> "{" declaration* "}" ;

breakStmt      -> "break" ";" ;
returnStmt     -> "return" expression? ";" ;

printStmt      -> "print" expression ";" ;
exprStmt       -> expression ";" ;

expression     -> commaseq ;

commaseq       -> assignment ( "," assignment )* ;
assignment     -> IDENTIFIER "=" assignment | logic_or ;

logic_or       -> logic_and "or" logic_or ;
logic_and      -> ternary "and" ternary ;

ternary        -> equality ( "?" ternary ":" ternary )? ;

equality       -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison     -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;

term           -> factor ( ( "-" | "+" ) factor )* ;
factor         -> unary ( ( "/" | "*" ) unary )* ;
unary          -> ( "!" | "-" ) unary | call ;

call           -> primary ( "(" arguments? ")" )* ;
arguments      -> assignment ( "," assignment )* ;

primary        -> NUMBER | STRING | "true" | "false" | "nil" | "(" expression ")" | IDENTIFIER ;
